--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
     <title>Portifolio Duda</title>
 </head>
 <body>
+    <header>
 <img src=""
+<p>eu sou duda</p> 
+<h1>eu aprendo sobre Programaçao</h1>
+<p>
+    sou aluna de computaçao, estudo pensamento computacional. Sou aluna do ensino medio. 
+    Tenho aulas de pensamento computacional usando o HTML, CSS e Javascript
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+</p>
+<p>minhas habilidades</p>
+<div>
+    <P>pintar unha</P>
+    <p>academia</p>
+    <p>arrumar meu cabelo</p>
+    <p>maquiagem</p>
+</div>
+</header>
 </body>
 </html>
