--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Portifolio Duda</title>
 </head>
 <body>
-    <header>
-<img src=""
+    <header class="container text-center">
+<img src="meuAvatar (1).png" alt="meuAvatar" class="rounded-circle" width="150" height="150" srcset="150"
 <p>eu sou duda</p> 
 <h1>eu aprendo sobre Programaçao</h1>
 <p>
