--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="container text-center">
 <img src="meuAvatar (1).png" alt="meuAvatar" class="rounded-circle" width="150" height="150" srcset="150"
-<p>eu sou duda</p> 
+<p class="lead"> sou duda</p> 
 <h1>eu aprendo sobre Programaçao</h1>
 <p>
     sou aluna de computaçao, estudo pensamento computacional. Sou aluna do ensino medio. 
