--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
  <header class="container text-center">
-<img src="img/avatar-perfil.png" alt="avatar da duda" class="rounded-circle" width="150" height="150" srcset="150"
+<img src="img/meuAvatar(1).png" alt="avatar da duda" class="rounded-circle" width="150" height="150" srcset="150"
 <p class="lead"> sou duda</p> 
 <h1>eu aprendo sobre Programaçao</h1>
 <p>
