--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </p>
 <p>minhas habilidades</p>
 <div>
-    <P>pintar unha</P>
+    <P class="badge text-bg-secondary">pintar unha</P>
     <p>academia</p>
-    <p>arrumar meu cabelo</p>
+    <p >arrumar meu cabelo</p>
     <p>maquiagem</p>
 </div>
 </header>
