--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 <p>minhas habilidades</p>
 <div>
     <P class="badge text-bg-secondary">pintar unha</P>
-    <p >academia</p>
-    <p >arrumar meu cabelo</p>
-    <p>maquiagem</p>
+    <p class="badge text-bg-secondary">academia</p>
+    <p class="badge text-bg-secondary">arrumar meu cabelo</p>
+    <p class="badge text-bg-secondary">maquiagem</p>
 </div>
 </header>
 </body>
