--- a/index.html
+++ b/index.html
@@ -28,7 +28,17 @@
 <main class="container">
 <h2> meus projetos</h2>
 <div class="row>">
-    <div class=""
+    <div class="col-md-4"></div>
+    <div class="card" style="width: 18rem;">
+        <img src="..." class="card-img-top" alt="..."/>
+    <div class="card-body">
+        <h5 class="card-title"> Card title</h5>
+        <p class="card-text">
+            projetos no github
+        </p>
+        <a href="" class="btn  btn-primary"> ir para o site</a>
+    </div>
+    <
 </main>
 </body>
 </html>
