--- a/index.html
+++ b/index.html
@@ -28,18 +28,23 @@
 <main class="container">
 <h2> meus projetos</h2>
 <div class="row>">
-    <div class="col-md-4"></div>
-    <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="..."/>
+    <div class="col-md-4">
+    <div class="card">
+        <img src="img/projeto-1.png" class="card-img-top" alt="imagem do projeto da biblioteca virtual"/>
     <div class="card-body">
-        <h5 class="card-title"> Card title</h5>
-        <p class="card-text">
-            projetos no github
-        </p>
+        <h5 class="card-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+          <p class="card-text">
+           Este projeto é uma página web que apresenta uma lista dos meus livros
+      favoritos, incluindo informações sobre os autores, datas de publicação e
+      links para compra na Amazon. A página é estilizada com CSS para uma
+      visualização agradável e usa fontes externas do Google Fonts.
+          </p>
         <a href="" class="btn  btn-primary"> ir para o site</a>
+       </div>
     </div>
-
-    <
+</div>
+</div>
+</div>
 </main>
 </body>
 </html>
