--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
       links para compra na Amazon. A página é estilizada com CSS para uma
       visualização agradável e usa fontes externas do Google Fonts.
           </p>
-        <a href="" class="btn  btn-primary"> ir para o site</a>
-       </div>
+        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja o projeto</button>
+        </div>
+      </div>
     </div>
-</div>
-</div>
-</div>
+  </div>
+ </div>
 </main>
 </body>
 </html>
