--- a/index.html
+++ b/index.html
@@ -43,8 +43,32 @@
         </div>
       </div>
     </div>
+<div class="col-md-4">
+    <div class="card">
+        <img src="img/projeto-2.png" class="card-img-top" alt="imagem de projeto Uma jornada interativa" />
+        <div class="card-body">
+          <h5 class="card-title">Decidindo o Futuro: Uma Jornada Interativa sobre a Inteligência
+                            Artificial</h5>
+          <p class="card-text">
+           Este projeto é um jogo interativo baseado em navegador que explora o impacto e as implicações da Inteligência Artificial (IA) na sociedade, permitindo que as
+        pessoas jogadoras façam escolhas que influenciam o desenrolar de uma narrativa sobre o
+        futuro da IA.
+          </p>
+          <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja o projeto</button>
+        </div>
+      </div>
+    </div>
+<div class="col-md-4">
+    <div class="card">
+        <img src="img/projeto-3.png" class="card-img-top" alt="imagem de projeto Uma Aventura Interativa em Astronomia com Scratch" />
+        <div class="card-body">
+          <h5 class="card-title">Explorando o Universo: Uma Aventura Interativa em Astronomia com Scratch</h5>
+          <p class="card-text">
+           Este projeto Scratch cria uma experiência interativa educativa sobre
+        astronomia, permitindo aos usuários explorar informações sobre constelações, eclipses, e a
+        forma da Terra através de cenários dinâmicos e diálogos informativos.
+          </p>
   </div>
- </div>
 </main>
 </body>
 </html>
