--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         pessoas jogadoras façam escolhas que influenciam o desenrolar de uma narrativa sobre o
         futuro da IA.
           </p>
-          <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja o projeto</button>
+          <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target=">Veja o projeto</button>
         </div>
       </div>
     </div>
@@ -68,6 +68,7 @@
         astronomia, permitindo aos usuários explorar informações sobre constelações, eclipses, e a
         forma da Terra através de cenários dinâmicos e diálogos informativos.
           </p>
+           <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja o projeto</button>
   </div>
 </main>
 </body>
