--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
           </p>
            <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja o projeto</button>
   </div>
+  </div>
+  </div>
+  </div>
+
 </main>
 </body>
 </html>
