--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         pessoas jogadoras façam escolhas que influenciam o desenrolar de uma narrativa sobre o
         futuro da IA.
           </p>
-          <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja o projeto</button>
+          <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">Veja o projeto</button>
         </div>
       </div>
     </div>
@@ -67,7 +67,7 @@
         astronomia, permitindo aos usuários explorar informações sobre constelações, eclipses, e a
         forma da Terra através de cenários dinâmicos e diálogos informativos.
           </p>
-           <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">Veja o projeto</button>
+           <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3.">Veja o projeto</button>
   </div>
   </div>
   </div>
